--- a/src/component/aboutMe/AboutMe.css
+++ b/src/component/aboutMe/AboutMe.css
@@ -23,6 +23,12 @@
 .AboutmeHeading {
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.5em;
+}
+
+.AboutmeHeading_paragraph {
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.2em;
 }
 
@@ -116,6 +122,12 @@
     }
 
     .AboutmeHeading {
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1em;
+    }
+
+    .AboutmeHeading_paragraph{
         color: white;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 1em;
